--- a/results/main.css
+++ b/results/main.css
@@ -84,6 +84,26 @@ nav li {
 	margin-bottom:1.5px;
 }
 
+#committers {
+	font-size:1.6em;
+	font-family:Philosopher;
+    margin-bottom: 1em;
+}
+
+.committer {
+	margin-left:1em;
+	vertical-align:middle;
+}
+
+#committers a {
+	color:#000000;
+	text-decoration:none;
+}
+
+#committers a:visited {
+	color:#000000;
+}
+
 #blarticle a {
 	color:#740103;
 	text-decoration:none;
