--- a/source/templates/archive.mustache
+++ b/source/templates/archive.mustache
@@ -13,6 +13,12 @@
 		<link rel="alternate" type="application/rss+xml" title="RSS" href="http://addmeto.cc/feed" >
 		<link href="http://fonts.googleapis.com/css?family=Philosopher&subset=cyrillic" rel="stylesheet" type="text/css" >
 		<title>{{ title }}</title>
+
+        <meta name="kittycheck_site_uniq_id" content="addmeto-cc-{{ page }}" />
+        <meta name="kittycheck_position" content="top=30,right=30" />
+        <meta name="kittycheck_checkin_color" content="#ababab" />
+        <script src="http://kittycheck.com/js/inject.js"></script>
+
 		<script type="text/javascript" async="" id="gauges-tracker" data-site-id="4f7abaee613f5d1ea500007d" src="//secure.gaug.es/track.js" ></script>
 	</head>
 	<body style="" >
@@ -29,7 +35,7 @@
     s.parentNode.insertBefore(t, s);
   })();
 </script>
-<header><span id="headertext" ><a href="/" >Еще один линкблог<span style="font-size:9pt; position:relative; top:-9px; left:2px; " >™</span></a><nav><ul><li><a href="/archive" >Архив</a></li><li><a href="/feed" >RSS</a></li></ul></nav></span><img alt="" src="/images/Black-cat.png" id="kitty" ></header><article id="blarticle" >
+<header><span id="headertext" ><a href="/" >Еще один линкблог<span style="font-size:9pt; position:relative; top:-9px; left:2px; " >™</span></a><nav><ul><li><a href="/archive" >Архив</a></li><li><a href="/feed" >RSS</a></li></ul></nav></span></header><article id="blarticle" >
 <a href="{{ permalink }}" style="color:#000000; " ><h1>{{ title }}</h1></a>
         <ul>
         {{#items }}
