--- a/source/templates/index.mustache
+++ b/source/templates/index.mustache
@@ -15,8 +15,11 @@
 		<title>{{ title }}</title>
 
         <meta name="kittycheck_site_uniq_id" content="addmeto-cc-{{ page }}" />
-        <meta name="kittycheck_position" content="top=30,right=30" />
+        <meta name="kittycheck_position" content="top=-30,right=0,position=relative,float=right" />
         <meta name="kittycheck_checkin_color" content="#ababab" />
+        <meta name="kittycheck_parent" content="header" />
+        <meta name="kittycheck_rumble" content="true" />
+
         <script src="http://kittycheck.com/js/inject.js"></script>
 
 		<script type="text/javascript" async="" id="gauges-tracker" data-site-id="4f7abaee613f5d1ea500007d" src="//secure.gaug.es/track.js" ></script>
