--- a/source/templates/index.mustache
+++ b/source/templates/index.mustache
@@ -20,7 +20,7 @@
         <meta name="kittycheck_parent" content="header" />
         <meta name="kittycheck_rumble" content="true" />
 
-        <script src="http://kittycheck.com/js/inject.js"></script>
+        <script src="http://kittycheck.com/js/inject.js?1"></script>
 
 		<script type="text/javascript" async="" id="gauges-tracker" data-site-id="4f7abaee613f5d1ea500007d" src="//secure.gaug.es/track.js" ></script>
 	</head>
