--- a/source/templates/index.mustache
+++ b/source/templates/index.mustache
@@ -15,9 +15,8 @@
 		<title>{{ title }}</title>
 
         <meta name="kittycheck_site_uniq_id" content="addmeto-cc-{{ page }}" />
-        <meta name="kittycheck_position" content="top=-30,right=0,position=relative,float=right" />
+        <meta name="kittycheck_position" content="top=30,right=30" />
         <meta name="kittycheck_checkin_color" content="#ababab" />
-        <meta name="kittycheck_parent" content="header" />
         <meta name="kittycheck_rumble" content="true" />
 
         <script src="http://kittycheck.com/js/inject.js?1"></script>
