Fix viewport value

--- a/source/templates/archive.mustache
+++ b/source/templates/archive.mustache
@@ -4,7 +4,7 @@
 		<link href="/main.css" rel="stylesheet" type="text/css" >
 		<meta name="author" content="Бобук" >
 		<meta name="description" content="Бобук Еще один линкблог, add me to cc" >
-		<meta name="viewport" content="width=device-width; initial-scale=1;" >
+		<meta name="viewport" content="width=device-width, initial-scale=1" >
 		<meta name="apple-mobile-web-app-capable" content="yes" >
 		<meta name="ROBOTS" content="INDEX,FOLLOW" >
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" >
