--- a/source/templates/archive.mustache
+++ b/source/templates/archive.mustache
@@ -54,7 +54,7 @@
 <script type='text/javascript' src='http://zor.livefyre.com/wjs/v1.0/javascripts/livefyre_init.js'></script>
 <script type='text/javascript'>
     var fyre = LF({
-        article_id: 'addmeto-{{ page }}',
+        article_id: '{{ permalink }}',
         site_id: 299986
     });
 </script>
