--- a/source/templates/main.mustache
+++ b/source/templates/main.mustache
@@ -24,6 +24,14 @@
 		<script type="text/javascript" async="" id="gauges-tracker" data-site-id="4f7abaee613f5d1ea500007d" src="//secure.gaug.es/track.js" ></script>
 	</head>
 	<body style="" >
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/ru_RU/all.js#xfbml=1&appId=155444414545699";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
 <script type="text/javascript" >
   var _gauges = _gauges || [];
   (function() {
@@ -43,6 +51,12 @@
 <div style="margin-bottom:2em; " ><a href="{{ permalink }}" style="font-size:1.6em; font-family:Philosopher; margin-right:2em; color:#000000; " ># постоянная ссылка</a> <a href="http://flattr.com/thing/619239/" target="_blank" >
 <img src="http://api.flattr.com/button/flattr-badge-large.png" alt="Flattr this" title="Flattr this" border="0" ></a>
 <iframe frameborder="0" allowtransparency="true" scrolling="no" src="https://money.yandex.ru/embed/small.xml?uid=4100130214808&button-text=05&button-size=s&button-color=black&targets=%d0%9d%d0%b0+%d0%bf%d0%be%d0%b4%d0%b4%d0%b5%d1%80%d0%b6%d0%ba%d1%83+addmeto.cc&default-sum=100" width="auto" height="31" ></iframe></div>
+<div align="center">
+<a href="https://twitter.com/share" class="twitter-share-button" data-url="{{ permalink }}" data-text="{{ title }}" data-via="bobuk">Tweet</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+<div class="fb-like" data-href="{{ permalink }}" data-send="false" data-layout="button_count" data-width="100" data-show-faces="false"></div>
+<g:plusone size="medium" annotation="inline" href="{{ permalink }}" width="120"></g:plusone>
+</div>
 
 <!-- START: Livefyre Embed -->
 <script type='text/javascript' src='http://zor.livefyre.com/wjs/v1.0/javascripts/livefyre_init.js'></script>
@@ -53,4 +67,11 @@
     });
 </script>
 <!-- END: Livefyre Embed -->
+<script type="text/javascript">
+  (function() {
+    var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
+    po.src = 'https://apis.google.com/js/plusone.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+  })();
+</script>
 </body></html>
