--- a/source/templates/archive.mustache
+++ b/source/templates/archive.mustache
@@ -20,18 +20,8 @@
         <meta name="kittycheck_rumble" content="true" />
 
         <script src="http://kittycheck.com/js/inject.js?1"></script>
-
-		<script type="text/javascript" async="" id="gauges-tracker" data-site-id="4f7abaee613f5d1ea500007d" src="//secure.gaug.es/track.js" ></script>
 	</head>
 	<body style="" >
-	<div id="fb-root"></div>
-<script>(function(d, s, id) {
-  var js, fjs = d.getElementsByTagName(s)[0];
-  if (d.getElementById(id)) return;
-  js = d.createElement(s); js.id = id;
-  js.src = "//connect.facebook.net/ru_RU/all.js#xfbml=1&appId=155444414545699";
-  fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script>
 <script type="text/javascript" >
   var _gauges = _gauges || [];
   (function() {
@@ -44,6 +34,7 @@
     var s = document.getElementsByTagName('script')[0];
     s.parentNode.insertBefore(t, s);
   })();
+
 </script>
 <header><span id="headertext" ><a href="/" >Еще один линкблог<span style="font-size:9pt; position:relative; top:-9px; left:2px; " >™</span></a><nav><ul><li><a href="/archive" >Архив</a></li><li><a href="/feed" >RSS</a></li></ul></nav></span></header><article id="blarticle" >
 <a href="{{ permalink }}" style="color:#000000; " ><h1>{{ title }}</h1></a>
@@ -54,15 +45,13 @@
         </ul>
         </article>
 <div id="committers" ><a href="https://github.com/bobuk/addmeto.cc/blob/master/source/posts/{{ page }}.md" >ЗаGitHubить!</a> {{{ committers }}}</div>
-<div style="margin-bottom:2em; " ><a href="{{ permalink }}" style="font-size:1.6em; font-family:Philosopher; margin-right:2em; color:#000000; " ># постоянная ссылка</a> <a href="http://flattr.com/thing/619239/" target="_blank" >
-<img src="http://api.flattr.com/button/flattr-badge-large.png" alt="Flattr this" title="Flattr this" border="0" ></a>
-<iframe frameborder="0" allowtransparency="true" scrolling="no" src="https://money.yandex.ru/embed/small.xml?uid=4100130214808&button-text=05&button-size=s&button-color=black&targets=%d0%9d%d0%b0+%d0%bf%d0%be%d0%b4%d0%b4%d0%b5%d1%80%d0%b6%d0%ba%d1%83+addmeto.cc&default-sum=100" width="auto" height="31" ></iframe></div>
-<div align="center">
-<a href="https://twitter.com/share" class="twitter-share-button" data-url="{{ permalink }}" data-text="{{ title }}" data-via="bobuk">Tweet</a>
-<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-<div class="fb-like" data-href="{{ permalink }}" data-send="false" data-layout="button_count" data-width="100" data-show-faces="false"></div>
-<g:plusone size="medium" annotation="inline" href="{{ permalink }}" width="120"></g:plusone>
+<hr/>
+<div style="margin-bottom:2em; " ><a href="{{ permalink }}" style="font-size:1.6em; font-family:Philosopher; margin-right:2em; color:#000000; " ># постоянная ссылка</a>
+    <iframe frameborder="0" allowtransparency="true" scrolling="no" src="https://money.yandex.ru/embed/small.xml?uid=4100130214808&button-text=05&button-size=s&button-color=black&targets=%d0%9d%d0%b0+%d0%bf%d0%be%d0%b4%d0%b4%d0%b5%d1%80%d0%b6%d0%ba%d1%83+addmeto.cc&default-sum=100" width="auto" height="31" ></iframe>
+    <a href="https://twitter.com/share" class="twitter-share-button" data-url="{{ permalink }}" data-text="{{ title }}" data-via="bobuk">Tweet</a>
+    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 </div>
+
 <!-- START: Livefyre Embed -->
 <script type='text/javascript' src='http://zor.livefyre.com/wjs/v1.0/javascripts/livefyre_init.js'></script>
 <script type='text/javascript'>
@@ -72,11 +61,4 @@
     });
 </script>
 <!-- END: Livefyre Embed -->
-<script type="text/javascript">
-  (function() {
-    var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
-    po.src = 'https://apis.google.com/js/plusone.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
-  })();
-</script>
 </body></html>
