--- a/source/templates/archive.mustache
+++ b/source/templates/archive.mustache
@@ -47,7 +47,7 @@
 <div id="committers" ><a href="https://github.com/bobuk/addmeto.cc/blob/master/source/posts/{{ page }}.md" >ЗаGitHubить!</a> {{{ committers }}}</div>
 <hr/>
 <div style="margin-bottom:2em; " ><a href="{{ permalink }}" style="font-size:1.6em; font-family:Philosopher; margin-right:2em; color:#000000; " ># постоянная ссылка</a>
-    <iframe frameborder="0" allowtransparency="true" scrolling="no" src="https://money.yandex.ru/embed/small.xml?uid=4100130214808&button-text=05&button-size=s&button-color=black&targets=%d0%9d%d0%b0+%d0%bf%d0%be%d0%b4%d0%b4%d0%b5%d1%80%d0%b6%d0%ba%d1%83+addmeto.cc&default-sum=100" width="auto" height="31" ></iframe>
+    <iframe style="vertical-align:bottom;"  frameborder="0" allowtransparency="true" scrolling="no" src="https://money.yandex.ru/embed/small.xml?uid=4100130214808&button-text=05&button-size=s&button-color=black&targets=%d0%9d%d0%b0+%d0%bf%d0%be%d0%b4%d0%b4%d0%b5%d1%80%d0%b6%d0%ba%d1%83+addmeto.cc&default-sum=100" width="auto" height="31" ></iframe>
     <a href="https://twitter.com/share" class="twitter-share-button" data-url="{{ permalink }}" data-text="{{ title }}" data-via="bobuk">Tweet</a>
     <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 </div>
