--- a/source/templates/index.mustache
+++ b/source/templates/index.mustache
@@ -46,13 +46,13 @@
     <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 </div>
 
-<!-- START: Livefyre Embed -->
-<script type='text/javascript' src='http://zor.livefyre.com/wjs/v1.0/javascripts/livefyre_init.js'></script>
-<script type='text/javascript'>
-    var fyre = LF({
-        article_id: '{{ permalink }}',
-        site_id: 299986
-    });
-</script>
-<!-- END: Livefyre Embed -->
+<div id="hypercomments_widget"></div><script type="text/javascript">
+var _hcp = _hcp || {};
+_hcp.widget_id = 659;_hcp.widget = "Stream";_hcp.lang='ru';_hcp.xid = '{{ permalink }}';
+(function() {
+var hcc = document.createElement("script"); hcc.type = "text/javascript"; hcc.async = true;
+hcc.src = ("https:" == document.location.protocol ? "https" : "http")+"://widget.hypercomments.com/apps/js/hc.js";
+var s = document.getElementsByTagName("script")[0]; s.parentNode.insertBefore(hcc, s.nextSibling);
+})();</script>
+
 </body></html>
