--- a/source/templates/index.mustache
+++ b/source/templates/index.mustache
@@ -3,7 +3,7 @@
 		<meta http-equiv="Content-Type" content="text/html;charset=utf-8" >
 		<link href="/main.css" rel="stylesheet" type="text/css" >
 		<meta name="author" content="Бобук" >
-		<meta name="description" content="Бобук Еще один линкблог, add me to cc" >
+		<meta name="description" content="Бобук Еще один линкблог, add me to cc!" >
 		<meta name="viewport" content="width=device-width, initial-scale=1;" >
 		<meta name="apple-mobile-web-app-capable" content="yes" >
 		<meta name="ROBOTS" content="INDEX,FOLLOW" >
