--- a/source/templates/index.mustache
+++ b/source/templates/index.mustache
@@ -46,7 +46,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="#">Еще один линкблог</a>
+          <a class="brand" href="/">Еще один линкблог</a>
           <div class="nav-collapse">
             <ul class="nav">
               <li class="active"><a href="/">Сегодня</a></li>
