--- a/source/templates/archive.mustache
+++ b/source/templates/archive.mustache
@@ -49,8 +49,8 @@
           <a class="brand" href="/">Еще один линкблог</a>
           <div class="nav-collapse">
             <ul class="nav">
-              <li class="active"><a href="/">Сегодня</a></li>
-              <li><a href="/archive">Архив</a></li>
+              <li><a href="/">Сегодня</a></li>
+              <li class="active"><a href="/archive">Архив</a></li>
               <li><a href="http://twitter.com/bobuk">Автор</a></li>
               <li><a href="/feed">RSS</a></li>
             </ul>
