remove article name, all links must be _blank'ed

--- a/source/templates/archive.mustache
+++ b/source/templates/archive.mustache
@@ -60,7 +60,7 @@
     </div>
 
     <div class="container">
-      <article title="{{ title }}">
+      <article>
         <ul>
         {{#items }}
             <li><a href="{{ fname }}">{{ subtitle }}</a></li>
