--- a/source/templates/index.mustache
+++ b/source/templates/index.mustache
@@ -60,7 +60,7 @@
     </div>
 
     <div class="container">
-      <article title="{{ title }}">
+      <article>
         <a href="{{ permalink }}" style="color:#000000; " ><h1>{{ title }}</h1></a>
         {{& content }}
       </article>
