--- a/source/templates/archive.mustache
+++ b/source/templates/archive.mustache
@@ -72,7 +72,7 @@
       <hr>
 
       <footer>
-        <p>&copy; Company 2012</p>
+        <p>&copy; Григорий Бакунов 2012</p>
       </footer>
 
     </div> <!-- /container -->
