--- a/source/templates/index.mustache
+++ b/source/templates/index.mustache
@@ -77,7 +77,7 @@ var s = document.getElementsByTagName("script")[0]; s.parentNode.insertBefore(hc
 })();</script>
 
       <footer>
-        <p>&copy; Company 2012</p>
+        <p>&copy; Григорий Бакунов 2012</p>
       </footer>
 
     </div> <!-- /container -->
