images must be centered

--- a/source/templates/bootstrap/less/style.less
+++ b/source/templates/bootstrap/less/style.less
@@ -47,6 +47,11 @@ article ul li {
     list-style-type:hebrew;
 }
 
+article img {
+    display: block;
+    margin-left: auto; margin-right: auto;
+}
+
 
 hc {
     float: none;
