Убрал тень из навбара (создаёт "грязь")

--- a/source/templates/bootstrap/less/style.less
+++ b/source/templates/bootstrap/less/style.less
@@ -75,6 +75,10 @@ hc {
     display: inline;
 }
 
+.navbar .nav > li > a {
+    text-shadow: none;
+}
+
 /* ===== Primary Styles ========================================================
    Author:
    ========================================================================== */
