--- a/source/templates/index.mustache
+++ b/source/templates/index.mustache
@@ -84,6 +84,7 @@ var s = document.getElementsByTagName("script")[0]; s.parentNode.insertBefore(hc
     </div> <!-- /container -->
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.js"></script>
 <script>window.jQuery || document.write('<script src="/js/libs/jquery-1.7.2.js"><\/script>')</script>
+<script src="/js/libs/base64.js"></script>
 
 <script src="/js/libs/bootstrap/bootstrap.min.js"></script>
 <script>var page = '{{ page }}';</script>
