--- a/source/templates/archive.mustache
+++ b/source/templates/archive.mustache
@@ -51,7 +51,7 @@
             <ul class="nav">
               <li><a href="/">Сегодня</a></li>
               <li class="active"><a href="/archive">Архив</a></li>
-              <li><a href="http://twitter.com/bobuk">Автор</a></li>
+              <li><a href="/rules.html">О проекте</a></li>
               <li><a href="/feed">RSS</a></li>
             </ul>
           </div><!--/.nav-collapse -->
