--- a/source/templates/section.mustache
+++ b/source/templates/section.mustache
@@ -109,5 +109,23 @@ var s = document.getElementsByTagName("script")[0]; s.parentNode.insertBefore(hc
 <script src="/js/libs/bootstrap/bootstrap.min.js"></script>
 
 <script src="/js/script.js"></script>
+<!-- Start of Woopra Code -->
+<script type="text/javascript">
+function woopraReady(tracker) {
+    tracker.setDomain('addmeto.cc');
+    tracker.setIdleTimeout(60000);
+    tracker.trackPageview({type:'pageview',url:window.location.pathname+window.location.search,title:document.title});
+    return false;
+}
+(function() {
+    var wsc = document.createElement('script');
+    wsc.src = document.location.protocol+'//static.woopra.com/js/woopra.js';
+    wsc.type = 'text/javascript';
+    wsc.async = true;
+    var ssc = document.getElementsByTagName('script')[0];
+    ssc.parentNode.insertBefore(wsc, ssc);
+})();
+</script>
+<!-- End of Woopra Code -->
 </body>
 </html>
