--- a/source/templates/section.mustache
+++ b/source/templates/section.mustache
@@ -11,6 +11,9 @@
 	<link rel="stylesheet" href="/style.css">
 	<script src="/js/libs/modernizr-2.5.3-respond-1.1.0.min.js"></script>
 
+    <script src="/js/highlight.pack.js"></script>
+    <script>hljs.initHighlightingOnLoad();</script>
+
     <link rel="alternate" type="application/rss+xml" title="RSS" href="http://addmeto.cc/feed" >
     <link href="http://fonts.googleapis.com/css?family=Philosopher&subset=cyrillic" rel="stylesheet" type="text/css" >
     <title>{{ title }}</title>
