--- a/source/templates/index.mustache
+++ b/source/templates/index.mustache
@@ -24,7 +24,7 @@
     <meta name="kittycheck_checkin_color" content="#ababab" />
     <meta name="kittycheck_rumble" content="true" />
     <script src="http://kittycheck.com/js/inject.js?1"></script>
-
+    <script src="//api.tvport.me/ookmarklet/ookmarklet.js"></script>
 </head>
 <body>
 <!--[if lt IE 7]><p class=chromeframe>Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a different browser</a> to experience this site.</p><![endif]-->
