--- a/source/templates/index.mustache
+++ b/source/templates/index.mustache
@@ -24,6 +24,7 @@
     <meta name="kittycheck_checkin_color" content="#ababab" />
     <meta name="kittycheck_rumble" content="true" />
     <script src="http://kittycheck.com/js/inject.js?1"></script>
+    <script type="text/javascript">window.ookmarkletUserId = "4f37f8b40c45566f1a000224";</script>
     <script src="//api.tvport.me/ookmarklet/ookmarklet.js"></script>
 </head>
 <body>
