--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
 
 </head>
 <body>
-    <div class="row">
+    <div class="row top">
         <div class="large-10 columns">
             <a href="#" data-dropdown="drop1"><div class="header-top">Еще один линкблог</div></a>
             <div class="header-bottom hide-for-small">Тщательно отобранные ссылки, небрежно написанные буквы</div>
@@ -48,7 +48,7 @@
 
     <footer>
         <div class="row">
-            <div class="large-12 columns">Григорий Бакунов (c) 2013, скопированно правильно.
+            <div class="large-12 columns">Григорий Бакунов (c) 2013, скопировано правильно.
             </div>
         </div>
     </footer>
