--- a/templates/static/css/main.css
+++ b/templates/static/css/main.css
@@ -2,6 +2,9 @@ h1, h2, h3, h4, h5 {
     font-family: 'Poiret One', cursive;
 }
 
+.top {
+    margin-top: 1em;
+}
 article {
 padding: 1em 1em 1em 1em;
 background: rgb(251,253,255); /* Old browsers */
