Сделать отбивку в шапке лучше, чтобы не прилипала.

--- a/templates/static/css/main.css
+++ b/templates/static/css/main.css
@@ -79,6 +79,8 @@ mark {
     text-rendering: optimizeLegibility;
     color: #8189d8;
     margin-top: 0.5em;
+    
+    margin-bottom: .7em; /* сделать отбивку лучше, чтобы не прилипала */
 }
 
 hr.header {
