add instapaper support

--- a/templates/index.html
+++ b/templates/index.html
@@ -27,8 +27,8 @@
     </div>
     <div class="row">
         <div class="large-12 large-centered columns">
-            <a href="/@file@" ><h1 class="titles">@title@</h1></a>
-            <article>
+            <a href="/@file@" ><h1 class="instapaper_title titles">@title@</h1></a>
+            <article class="instapaper_body">
                 @text@
             </article>
         </div>
