--- a/templates/index.html
+++ b/templates/index.html
@@ -71,10 +71,10 @@
   <iframe frameborder="0" allowtransparency="true" scrolling="no" src="https://money.yandex.ru/embed/donate.xml?uid=4100130214808&amp;default-sum=100&amp;targets=%D0%BD%D0%B0+%D0%BF%D0%BE%D0%B4%D0%B4%D0%B5%D1%80%D0%B6%D0%B0%D0%BD%D0%B8%D0%B5+%D0%BF%D1%80%D0%BE%D0%B5%D0%BA%D1%82%D0%B0&amp;target-visibility=on&amp;project-name=Addmeto.cc&amp;project-site=http%3A%2F%2Faddmeto.cc%2F&amp;button-text=05&amp;comment=on&amp;hint=%D0%9F%D0%BE%D0%B6%D0%B5%D0%BB%D0%B0%D1%82%D1%8C+%D1%87%D0%B5%D0%B3%D0%BE-%D0%BD%D0%B8%D0%B1%D1%83%D0%B4%D1%8C+%D0%B4%D0%BE%D0%B1%D1%80%D0%BE%D0%B3%D0%BE&amp;mail=on" width="450" height="201"></iframe>
 </div>
 <ul id="drop1" class="f-dropdown" data-dropdown-content>
-  <li><a href="/">Сегодня</a></li>
-  <li><a href="/archive">Архив</a></li>
-  <li><a href="/about">О проекте</a></li>
-  <li><a href="/feed">RSS</a></li>
+  <a href="/"><li>Сегодня</li></a>
+  <a href="/archive"><li>Архив</li></a>
+  <a href="/about"><li>О проекте</li></a>
+  <a href="/feed"><li>RSS</li></a>
 </ul>
 
 </html>
