--- a/templates/index.html
+++ b/templates/index.html
@@ -16,6 +16,7 @@
   <link rel="stylesheet" href="/static/css/main.css" />
 
   <script src="/static/js/vendor/custom.modernizr.js"></script>
+  <script src="/static/js/vendor/jquery.js"></script>
   <script src="http://kittycheck.com/js/inject.js"></script>
 </head>
 <body>
@@ -59,11 +60,6 @@
     </footer>
 
 <!-- Yandex.Metrika counter --><script type="text/javascript">(function (d, w, c) { (w[c] = w[c] || []).push(function() { try { w.yaCounter18771010 = new Ya.Metrika({id:18771010, webvisor:true, clickmap:true, trackLinks:true, accurateTrackBounce:true}); } catch(e) { } }); var n = d.getElementsByTagName("script")[0], s = d.createElement("script"), f = function () { n.parentNode.insertBefore(s, n); }; s.type = "text/javascript"; s.async = true; s.src = (d.location.protocol == "https:" ? "https:" : "http:") + "//mc.yandex.ru/metrika/watch.js"; if (w.opera == "[object Opera]") { d.addEventListener("DOMContentLoaded", f, false); } else { f(); } })(document, window, "yandex_metrika_callbacks");</script><noscript><div><img src="//mc.yandex.ru/watch/18771010" style="position:absolute; left:-9999px;" alt="" /></div></noscript><!-- /Yandex.Metrika counter -->
-  <script>
-  document.write('<script src=/static/' +
-  ('__proto__' in {} ? 'js/vendor/zepto' : 'js/vendor/jquery') +
-  '.js><\/script>')
-  </script>
 
   <script src="/static/js/foundation.min.js"></script>
   <script>
