add archichive in template

--- a/templates/index.html
+++ b/templates/index.html
@@ -74,6 +74,7 @@
 <ul id="drop1" class="f-dropdown" data-dropdown-content>
   <a href="/"><li>Сегодня</li></a>
   <a href="/archive"><li>Архив</li></a>
+  <a href="/post/archive"><li>Архихив</li></a>
   <a href="/about"><li>О проекте</li></a>
   <a href="/feed"><li>RSS</li></a>
 </ul>
