--- a/templates/index.html
+++ b/templates/index.html
@@ -54,7 +54,7 @@
 
     <footer>
         <div class="row">
-            <div class="large-12 columns">Григорий Бакунов (c) 2013, скопировано правильно.
+            <div class="large-12 columns">Григорий Бакунов (c) 2013-2014, скопировано правильно.
             </div>
         </div>
     </footer>
