change coinbase address

--- a/templates/index.html
+++ b/templates/index.html
@@ -42,7 +42,7 @@
     <div class="row">
         <div class="large-6 columns">
             <ul class="button-group radius">
-                <li><a href="https://coinbase.com/checkouts/85a4de3abf40136270f74111b625fbb6?c=addmetocc" target="_blank" class="button small">заБиткойнь</a></li>
+                <li><a href="https://coinbase.com/checkouts/8aa47b1d7cdbb1aa7aecac3186c98773" target="_blank" class="button small">заБиткойнь</a></li>
                 <li><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=bobuk%40justos%2eorg&lc=RU&item_name=addmeto%2ecc&currency_code=USD&bn=PP%2dDonationsBF%3abtn_donate_SM%2egif%3aNonHosted" class="button small" target="_blank">заPayPalь</a></li>
                 <li><a href="#" data-reveal-id="myModal" class="button small">Я.Деньгуй</a></li>
             </ul>
