--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,8 @@
   <meta name="kittycheck_checkin_color" content="#2D3793" />
   <meta name="kittycheck_position" content="left=0,top=0" />
   <meta name="kittycheck_rumble" content="true" />
+  <meta name="kittycheck_site_uniq_id" content="addmetocc-@file@"/>
+
   <title>Бобук :: @title@</title>
   <link href='http://fonts.googleapis.com/css?family=Poiret+One&subset=latin,cyrillic,latin-ext' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="/static/css/normalize.css" />
