update for new structure

--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,7 @@
     </div>
     <div class="row">
         <div class="large-12 large-centered columns">
-            <a href="/@file@" ><h1 class="instapaper_title titles">@title@</h1></a>
+            <h1 class="instapaper_title titles"><a href="/@file@" >@title@</a></h1>
             <article class="instapaper_body">
                 @text@
             </article>
