--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,7 @@
     </div>
     <div class="row">
         <div class="large-12 large-centered columns">
-            <h1 class="instapaper_title titles"><a href="/@file@" >@title@</a></h1>
+            <h1 class="instapaper_title titles"><a href="/pages/@file@" >@title@</a></h1>
             <article class="instapaper_body">
                 @text@
             </article>
@@ -75,8 +75,8 @@
 </div>
 <ul id="drop1" class="f-dropdown" data-dropdown-content>
   <a href="/"><li>Сегодня</li></a>
-  <a href="/archive"><li>Архив</li></a>
-  <a href="/post/archive"><li>Архихив</li></a>
+  <a href="/pages/archive"><li>Архив</li></a>
+  <a href="https://github.com/bobuk/addmeto.cc/tree/master/pages/old"><li>Ссылки (былое)</li></a>
   <a href="/about"><li>О проекте</li></a>
   <a href="/feed"><li>RSS</li></a>
 </ul>
