--- a/templates/index.html
+++ b/templates/index.html
@@ -19,12 +19,12 @@
 
   <script src="/static/js/vendor/custom.modernizr.js"></script>
   <script src="/static/js/vendor/jquery.js"></script>
-  <script src="http://kittycheck.com/js/inject.js"></script>
+  <!--script src="http://kittycheck.com/js/inject.js"></script-->
 </head>
 <body>
     <div class="row top">
         <div class="large-10 columns">
-            <a href="#" data-dropdown="drop1"><div class="header-top">Еще один линкблог</div></a>
+            <a href="#" data-dropdown="drop1"><div class="header-top">Недомыслия</div></a>
             <div class="header-bottom hide-for-small">Тщательно отобранные ссылки, небрежно написанные буквы</div>
         </div>
         <div class="large-2 columns">
@@ -75,8 +75,8 @@
 </div>
 <ul id="drop1" class="f-dropdown" data-dropdown-content>
   <a href="/"><li>Сегодня</li></a>
-  <a href="/pages/archive"><li>Архив</li></a>
-  <a href="https://github.com/bobuk/addmeto.cc/tree/master/pages/old"><li>Ссылки (былое)</li></a>
+  <!--a href="/pages/archive"><li>Архив</li></a-->
+  <a href="https://github.com/bobuk/addmeto.cc/tree/master/pages/old"><li>Былое</li></a>
   <a href="/about"><li>О проекте</li></a>
   <a href="/feed"><li>RSS</li></a>
 </ul>
