--- a/templates/index.html
+++ b/templates/index.html
@@ -5,11 +5,11 @@
 <head>
 	<meta charset="utf-8" />
   <meta name="viewport" content="width=device-width" />
-  <meta name="kittycheck_parent" content=".kitty" />
+  <!--meta name="kittycheck_parent" content=".kitty" />
   <meta name="kittycheck_checkin_color" content="#2D3793" />
   <meta name="kittycheck_position" content="left=0,top=0" />
   <meta name="kittycheck_rumble" content="true" />
-  <meta name="kittycheck_site_uniq_id" content="addmetocc-@file@"/>
+  <meta name="kittycheck_site_uniq_id" content="addmetocc-@file@"/-->
 
   <title>Бобук :: @title@</title>
   <link href='http://fonts.googleapis.com/css?family=Poiret+One&subset=latin,cyrillic,latin-ext' rel='stylesheet' type='text/css'>
@@ -24,8 +24,8 @@
 <body>
     <div class="row top">
         <div class="large-10 columns">
-            <a href="#" data-dropdown="drop1"><div class="header-top">Недомыслия</div></a>
-            <div class="header-bottom hide-for-small">Тщательно отобранные ссылки, небрежно написанные буквы</div>
+            <a href="#" data-dropdown="drop1"><div class="header-top">Недомысль и я</div></a>
+            <div class="header-bottom hide-for-small">Не бритый снизу, бритый сверху, но мнение-то имею...</div>
         </div>
         <div class="large-2 columns">
             <div class="kitty"></div>
@@ -56,7 +56,7 @@
 
     <footer>
         <div class="row">
-            <div class="large-12 columns">Григорий Бакунов (c) 2013-2014, скопировано правильно.
+            <div class="large-12 columns">Григорий Бакунов (c) 2013-2015, скопировано правильно.
             </div>
         </div>
     </footer>
